# hypervisor

./: .gitignore  LICENSE  README.md
src/hvcore/: README.md
src/hvcore/src/: lib.rs
src/hvcore/src/hypervisor/: allocator.rs  apic_id.rs  debug_fb.rs  gdt_tss.rs  host.rs  interrupt_handlers.rs  mod.rs  paging_structures.rs  platform_ops.rs  registers.rs  segment.rs  serial_logger.rs  support.rs  switch_stack.rs  x86_instructions.rs
src/hvcore/src/hypervisor/amd/: guest.rs  mod.rs  npts.rs  svm.rs
src/hvcore/src/hypervisor/intel/: epts.rs  guest.rs  mtrr.rs  vmx.rs
src/uefi/: Cargo.toml  README.md
src/uefi/boot_shim/: Cargo.toml
src/uefi/boot_shim/src/: main.rs
src/uefi/check_hv_vendor/src/: main.rs
src/uefi/uefi_hv/src/: main.rs  ops.rs  println.rs
src/uefi/xtask/src/: cargo.rs  main.rs
src/uefi/xtask/src/vmtest/: bochs.rs  mod.rs  vmware.rs
src/windows/: README.md
src/windows/win_hv/src/: eprintln.rs  lib.rs  ops.rs
